[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Graphics/Menu_Background.png" type="Texture" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/DeleteScreen.gd" type="Script" id=3]
[ext_resource path="res://Resources/Fonts/menuBig.tres" type="DynamicFont" id=4]

[node name="DeleteScreen" type="TextureRect"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_right = 1920.0
margin_bottom = 300.0
custom_constants/margin_top = 160
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer2"]
margin_top = 171.0
margin_right = 1920.0
margin_bottom = 288.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Deleting Campaign Data"
align = 1
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="."]
margin_top = 300.0
margin_right = 3840.0
margin_bottom = 1300.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer3"]
margin_top = 377.0
margin_right = 3840.0
margin_bottom = 622.0
theme = ExtResource( 2 )
text = "Do you really want to
delete your campaign data?

You can not undo this."
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = 360.0
margin_right = 2880.0
margin_bottom = 660.0
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 3820.0
margin_bottom = 280.0

[node name="YesButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 1898.0
margin_bottom = 260.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Yes"
expand_icon = true

[node name="NoButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 1902.0
margin_right = 3800.0
margin_bottom = 260.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "No"
expand_icon = true
[connection signal="pressed" from="MarginContainer/VBoxContainer/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NoButton" to="." method="_on_NoButton_pressed"]
